# pledging-model

./: README.md  cabal.project  pledging-model.cabal
app/: pledge.hs
