name:                pledging-model
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Lars Bruenjes
maintainer:          lars.bruenjes@iohk.io
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable pledge
  hs-source-dirs:      app
  main-is:             pledge.hs
  build-depends:       base >= 4.7 && < 5
                     , gsl-random
                     , MonadRandom
                     , mtl
                     , optparse-generic
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
